Atualização dos arquivos

--- a/sobre.html
+++ b/sobre.html
@@ -35,14 +35,14 @@
                     <div class="desc">
                         <h3>Lílian S. Ferreira</h3>
                         <p>Formada em Tecnologia Ambiental e Estudante de Logística</p>
-                        <a href="https://www.linkedin.com/in/lilian-s-ferreira">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/lilian-s-ferreira" target="_blank">LinkedIn</a>
                     </div>
                 </div>
                 <div class="people right">
                     <div class="desc">
                         <h3>Matheus F. Pinheiro</h3>
                         <p>Estudante de Desenvolvimento Web</p>
-                        <a href="https://www.linkedin.com/in/mathygui">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/mathygui" target="_blank">LinkedIn</a>
                     </div>
                     <div class="photo">
                         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQEmmWbI9NI1-A/profile-displayphoto-shrink_200_200/0/1621750291243?e=1627516800&v=beta&t=aFoSrFx4drdW9F5KiiNbU45wy8Xj30PJYGb1U8fUAAI">
