Atualizado Index e Sobre

--- a/sobre.html
+++ b/sobre.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="desc">
                         <h3>Lílian S. Ferreira</h3>
-                        <p>Formada em Tecnologia Ambiental e Estudante de Logística</p>
+                        <p>Tecnóloga em Gestão Ambiental</p>
                         <a href="https://www.linkedin.com/in/lilian-s-ferreira" target="_blank">LinkedIn</a>
                     </div>
                 </div>
